Fix overflow auto bug

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -64,7 +64,6 @@ li {
 
 #page-region {
   position: fixed;
-  overflow: auto;
 }
 
 #nav-menu {
